[tool.poetry]
name = "lute"
version = "0.3.24"
description = "Framework for writing NLU pipelines"
authors = []

[tool.poetry.dependencies]
python = "^3.5"
pydash = "^4.6"
requests = "^2.19"
scikit-learn = "^0.19.2"
scipy = "^1.1"
regex = "^2018.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.620.0"
astpretty = "^1.3"
astor = "^0.7.1"

[[tool.poetry.source]]
name = "cheeseshop"
url = "https://cheeseshop.vernacular.ai"
