[tool.poetry]
name = "lute"
version = "0.7.4"
description = "Framework for writing NLU pipelines"
authors = []

[tool.poetry.dependencies]
python = "~3.6"
pydash = "^4.6"
scikit-learn = "^0.20.0"
scipy = "^1.1"
regex = "^2019.05.25"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.620.0"
astpretty = "^1.3"
astor = "^0.7.1"

[[tool.poetry.source]]
name = "cheeseshop"
url = "https://cheeseshop.vernacular.ai"
